# AIDAM

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: release.yml  tests.yml
aidam/: __init__.py  aggregate.py  app.py  cli.py  comparators.py  decompose.py  llm_worker.py  memoria.py  mimo_worker.py  modelos.py  models.py  pipeline.py  plataforma.py  preguntas.py  questions.py  retrieve.py  router.py  servidor.py  vectores.py  verify.py
aidam/agente/: __init__.py  angulos.py  archivos.py  auditoria.py  bucle.py  codigo.py  cola.py  computables.py  contexto.py  herramientas.py  idioma.py  orquestador.py  ortografia.py  permisos.py  rastreo.py  razonador.py  sandbox.py  sintesis.py  vision.py  voz.py
aidam/interfaz/: app.js  estilo.css  fondo.js  index.html
aidam/interfaz/fuentes/: fuentes.css
docs/: AGENT.md  ARCHITECTURE.md  ARQUITECTURA.md  DIAGRAMAS.md  INTERFAZ.md  INVESTIGACION.md  MODEL_CARD_HF.md  MULTI_SLM.md  RESEARCH.md  ROADMAP.md
escritorio/: .gitignore  CONTEXTO.md  README.md  main.js  package-lock.json  package.json  preload.js
escritorio/backend/: README.md
escritorio/data/local/: search_cache.sqlite
evaluacion/: eval_averitec.py  eval_baseline_llm.py  eval_llm_aggrefact.py
evaluation/: BENCHMARKS.md  audit_cnn_labels.py  decompose_claims.py  eval_averitec.py  eval_baseline_llm.py  eval_citation_support.py  eval_fever.py  eval_llm_aggrefact.py  eval_scifact.py  eval_tareas.py  knowledge_store.py  perfil_recursos.py  sweep_aggregation.py  tune_veto_hybrid.py  validate_teacher.py  verify_decomposed.py
evaluation/bfcl/: .gitignore  correr_fase1.sh
packaging/: empaquetar_backend.py  lanzador.py
tests/: conftest.py  test_aggregate.py  test_angulos.py  test_auditoria.py  test_cola.py  test_comparators.py  test_decompose.py  test_dialogo.py  test_herramientas.py  test_knowledge_store.py  test_llm_worker.py  test_memoria.py  test_modelos.py  test_orquestador.py  test_permisos.py  test_plataforma.py  test_preguntas.py  test_questions.py  test_rastreo.py  test_razonador.py  test_retrieve.py  test_router.py  test_sandbox.py  test_servidor.py  test_sintesis.py  test_vision.py  test_voz.py
training/: calibrar_verificador.py  calibrate_verifier.py  cuantizar_verificador.py  entrenar_verificador.py  finetune_razonador.py  generar_neutrales.py  generar_sinteticos_llm.py  generate_averitec_pairs.py  generate_date_neutrals.py  generate_denial_pairs.py  generate_fever_pairs.py  generate_longdoc_pairs.py  generate_neutrals.py  generate_scifact_pairs.py  generate_synthetic_llm.py  generate_temporal_pairs.py  mine_docnli_pairs.py  quantize_verifier.py  train_verifier.py
