[project]
name = "aidam"
version = "0.1.0"
description = "Agente de lógica comparativa: verificación de información multi-fuente con modelos pequeños"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Jeffrey Romero Del Val" }]
keywords = ["fact-checking", "verificacion", "nli", "slm", "agentes"]
dependencies = [
    "requests>=2.31",
    "ddgs>=9.0",
    "rich>=13.0",
    "trafilatura>=1.8",
]

[project.optional-dependencies]
verificador = [
    "torch>=2.2",
    # <5: transformers v5 (probado con 5.13) tiene una regresión que colapsa el
    # entrenamiento de DeBERTa-v3 a una sola clase; v4.57 entrena bien.
    "transformers>=4.44,<5",
    "sentencepiece>=0.2",
    "protobuf>=4.0",
]
entrenamiento = [
    "datasets>=3.0",
    "accelerate>=1.0",
]
dev = ["pytest>=8.0"]

[project.urls]
Repositorio = "https://github.com/DeliVali/AIDAM"

[project.scripts]
aidam = "aidam.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aidam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
