[project]
name = "aidam"
version = "0.1.0"
description = "Comparative logic agent: multi-source information verification with small models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Jeffrey Romero Del Val" }]
keywords = ["fact-checking", "verification", "nli", "slm", "agents"]
dependencies = [
    "requests>=2.31",
    "ddgs>=9.0",
    "rich>=13.0",
    "trafilatura>=1.8",
]

[project.optional-dependencies]
verificador = [
    "torch>=2.2",
    # <5: transformers v5 (tested with 5.13) has a regression that collapses
    # DeBERTa-v3 training to a single class; v4.57 trains fine.
    "transformers>=4.44,<5",
    "sentencepiece>=0.2",
    "protobuf>=4.0",
]
entrenamiento = [
    "datasets>=3.0",
    "accelerate>=1.0",
]
# CPU verification without PyTorch (~50 MB runtime instead of ~3 GB):
# requires the model exported with training/quantize_verifier.py
verificador-cpu = [
    "onnxruntime>=1.18",
    "transformers>=4.44,<5",
    "sentencepiece>=0.2",
    "protobuf>=4.0",
    "numpy>=1.24",
]
dev = ["pytest>=8.0"]

[project.urls]
Repository = "https://github.com/DeliVali/AIDAM"

[project.scripts]
aidam = "aidam.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aidam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
