[project]
name = "aidam"
version = "0.1.0"
description = "Comparative logic agent: multi-source information verification with small models"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "Jeffrey Romero Del Val" }]
keywords = ["fact-checking", "verification", "nli", "slm", "agents"]
dependencies = [
    "requests>=2.31",
    "ddgs>=9.0",
    "rich>=13.0",
    "trafilatura>=1.8",
]

[project.optional-dependencies]
verificador = [
    "torch>=2.2",
    # <5: transformers v5 (tested with 5.13) has a regression that collapses
    # DeBERTa-v3 training to a single class; v4.57 trains fine.
    "transformers>=4.44,<5",
    "sentencepiece>=0.2",
    "protobuf>=4.0",
]
entrenamiento = [
    "datasets>=3.0",
    "accelerate>=1.0",
]
# CPU verification without PyTorch (~50 MB runtime instead of ~3 GB):
# requires the model exported with training/quantize_verifier.py
verificador-cpu = [
    "onnxruntime>=1.18",
    "transformers>=4.44,<5",
    "sentencepiece>=0.2",
    "protobuf>=4.0",
    "numpy>=1.24",
]
# Graphical interface: local server + web UI (`aidam interfaz`)
interfaz = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "pypdf>=4.0",
    # Conservative question spelling cleanup (11 dictionary languages;
    # gracefully absent otherwise). The es diacritics use a curated map
    # in aidam/agente/ortografia.py: the package's es dictionary is
    # mojibake-corrupted (measured 2026-07-16).
    "pyspellchecker>=0.8",
]
# Local voice recognition (private: audio never leaves the machine).
# STT: faster-whisper (MIT). Capture/VAD: RealtimeSTT (MIT, bundles Silero
# VAD). TTS: Kokoro-82M via ONNX (Apache-2.0), played with sounddevice.
voz = [
    "faster-whisper>=1.0",
    "RealtimeSTT>=0.3",
    "kokoro-onnx>=0.4",
    "sounddevice>=0.4",
]
# Text extraction from images (OCR) for the interface, ONNX-based like
# the CPU verifier.
imagen = ["rapidocr-onnxruntime>=1.3"]
# The desktop app (native window, Electron) lives in escritorio/ — it is a
# Node project that spawns `aidam interfaz` as its backend; see docs/INTERFAZ.md.
# Tier-2 web crawling for JS-heavy pages (Apache-2.0); plain HTTP stays tier-1.
rastreo = ["crawl4ai>=0.7"]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.urls]
Repository = "https://github.com/DeliVali/AIDAM"

[project.scripts]
aidam = "aidam.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aidam"]

[tool.pytest.ini_options]
testpaths = ["tests"]
